--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -2,33 +2,84 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Flower Shop BS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Flower Shop Bootstrap</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
-    <!-- Google Font - Lato -->
     <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+    crossorigin="anonymous">
+
+
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+    <link rel="stylesheet" href="./assets/style/stylesheet.css">
   </head>
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <nav class="nav-bar"><img src="assets/images/logo.png"></nav>
+
     <!--Banner Jumbotron of the image-->
+    <div class="banner">
+      <div class="heading"><h1>Beautiful Flowers</h1></div>
+      <a href="#icons" id="learn-more">Learn more</a>
+    </div>
 
     <!--Four containers with img / text-->
-    <!-- 4 containers -->
+    <div class="icons">
+    <!-- Flower div -->
+      <div class="icon-block col-12 col-md-6 col-lg-3">
+        <div class="icon-text">
+          <img class="icon" src="./assets/images/flower-icon.png" alt="">
+          <p>Flowers for every kind of situation</p>
+        </div>
+      </div>
 
     <!-- Payments Div -->
+    <div class="icon-block col-12 col-md-6 col-lg-3">
+      <div class="icon-text">
+        <img class="icon" src="./assets/images/payment-icon.png" alt="">
+        <p>All major payments kinds accepted</p>
+      </div>
+    </div>
+
     <!-- Consultation Div -->
+      <div class="icon-block col-12 col-md-6 col-lg-3">
+        <div class="icon-text">
+          <img class="icon" src="./assets/images/phone-icon.png" alt="">
+          <p>Free consultation</p>
+        </div>
+      </div>
 
     <!-- Delivery Div -->
-
+      <div class="icon-block col-12 col-md-6 col-lg-3">
+        <div class="icon-text">
+          <img class="icon" src="./assets/images/truck-icon.png" alt="">
+          <p>City wide delivery</p>
+        </div>
+      </div>
+  
+  </div>
     <!--Scripts required for bootstrap CDN-->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous">
+    </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous">
+    </script>
+
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous">
+    </script>
   </body>
 </html>
