--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -20,7 +20,7 @@
   <body>
     <!--Header (flower shop logo block element)-->
     <header>
-      <img src="assets/images/logo.png" alt="">
+      <img src="assets/images/logo.png" alt="logo">
     </header>
 
     <div class='test'></div>
@@ -36,19 +36,19 @@
     <div class="container-fluid icons">
       <div class="row">
         <div class="icon-block col-md-3 col-sm-6 col-12">
-          <img class="icon col-md-6 col-sm-4 col" src="assets/images/flower-icon.png" alt="">
+          <img class="icon col-md-6 col-sm-4 col" src="assets/images/flower-icon.png" alt="flower-icon">
           <div class="icon-text col-md-6 col-sm-8 col">Flowers for every kind of situation</div>
         </div>
         <div class="icon-block col-md-3 col-sm-6 col-12">
-          <img class="icon col-md-6 col-sm-4 col-12" src="assets/images/payment-icon.png" alt="">
+          <img class="icon col-md-6 col-sm-4 col-12" src="assets/images/payment-icon.png" alt="payment-icon">
           <p class="icon-text col-md-6 col-sm-8">All major payments kinds accepted</p>
         </div>
         <div class="icon-block col-md-3 col-sm-6 col-12">
-          <img class="icon col-md-6 col-sm-4" src="assets/images/phone-icon.png" alt="">
+          <img class="icon col-md-6 col-sm-4" src="assets/images/phone-icon.png" alt="phone-icon">
           <p class="icon-text col-md-6 col-sm-8">Free consultation</p>
         </div>
         <div class="icon-block col-md-3 col-sm-6 col-12">
-          <img class="icon col-md-6 col-sm-4" src="assets/images/truck-icon.png" alt="">
+          <img class="icon col-md-6 col-sm-4" src="assets/images/truck-icon.png" alt="truck-icon">
           <p class="icon-text col-md-6 col-sm-8">City wide delivery</p>
         </div>
       </div>
