--- a/Example/01_basic.html
+++ b/Example/01_basic.html
@@ -76,9 +76,12 @@
     </div>
 
     <div class="row">
-      <div class="col-8 box"></div>
-      <div class="col-4 box"></div>
+      <div class="col-8 box" style="width: 20vw"></div>
+      <div class="col-4 box" style="width: 10vw"></div>
     </div>
+
+   
+    
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
