--- a/Example/cards.html
+++ b/Example/cards.html
@@ -19,6 +19,8 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <!-- Make sure you put your stylesheet at the bottom -->
+
     <style>
       .box {
         border: 1px solid black;
@@ -152,10 +154,10 @@
         </div>
         <div class="col box">
           <div class="card">
-            <!-- <div class="card-body"> -->
-            <div class="card-title">hello</div>
-            <div class="card-text">whatsup!</div>
-            <!-- </div> -->
+            <div class="card-body">
+              <!-- <div class="card-title">hello</div> -->
+              <div class="card-text">whatsup!</div>
+            </div>
           </div>
         </div>
         <div class="col box"></div>
