--- a/Example/01_basic.html
+++ b/Example/01_basic.html
@@ -80,7 +80,22 @@
       <div class="col-4 box"></div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
-
+    <div class="row">
+      <div class="col-8 box"></div>
+      <div class="col-4 box"></div>
+    </div>
+    <div class="row">
+      <div class="col-8 box"></div>
+      <div class="col-4 box"></div>
+    </div>
+    <div class="row">
+      <div class="col-8 box"></div>
+      <div class="col-4 box"></div>
+    </div>
+    <div class="row">
+      <div class="col-8 box"></div>
+      <div class="col-4 box"></div>
+    </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
