--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Flower Shop BS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Link and CDN required for bootstrap -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -17,18 +16,62 @@
     <link rel="stylesheet" href="./assets/style/stylesheet.css" />
   </head>
 
-  <body>
+  <body style="background-color: lightgreen;">
     <!--Header (flower shop logo block element)-->
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="assets/images/logo.png" alt="logo" width="140">
+        </a>
+      </div>
+    </nav>
     <!--Banner Jumbotron of the image-->
-
+    <div class="card text-white">
+      <img src="assets/images/flowershop.jpg" class="card-img" alt="flowershop" style="mix-blend-mode: darken;">
+      <div class="card-img-overlay d-flex" style="background-color: rgba(00,00,00,0.4)">
+        <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
+          <h1>Beautiful Flowers</h1>
+          <button type="button" class="btn btn-success">Learn More</button>
+        </div>
+      </div>
+    </div>
     <!--Four containers with img / text-->
+    <div class="container-fluid" id="service">
+
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 gx-5 gy-5" id="service-container">
+
+        <div class="col d-flex align-items-center">
+          <img src="assets/images/flower-icon.png" class="img-fluid" style="height:4rem; width: 4rem;">
+          <p class="lead">Flowers for every kind of situation</p>
+        </div>
+
+        <div class="col d-flex align-items-center">
+          <img src="assets/images/payment-icon.png" class="img-fluid" style="height:4rem; width: 4rem;">
+          <p class="lead">All major payments kinds accepted</p>
+        </div>
+
+        <div class="col d-flex align-items-center">
+          <img src="assets/images/phone-icon.png" class="img-fluid" style="height:4rem; width: 4rem;">
+          <p class="lead">Free consultation</p>
+        </div>
+
+        <div class="col d-flex align-items-center">
+          <img src="assets/images/truck-icon.png" class="img-fluid" style="height:4rem; width: 4rem;">
+          <p class="lead">City wide delivery</p>
+        </div>
+
+      </div>
+
+    </div>
     <!-- 4 containers -->
 
     <!-- Payments Div -->
+
     <!-- Consultation Div -->
 
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   </body>
 </html>
