--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -2,84 +2,16 @@
 <!DOCTYPE html>
 <html class="no-js">
   <head>
-
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    <!-- Bootstrap CSS -->
-    <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-    crossorigin="anonymous"
-  />
-
-  <script
-    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"
-  ></script>
-
-  <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"
-  ></script>
-
-  <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"
-  ></script>
-
-
-    <title>Exercise A</title>
-
+    <title></title>
     <meta name="description" content="" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
   </head>
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid justify-content-start">
-      <a class="navbar-brand" href="#">
-        <img src="./assets/bootstrap.png" alt="" width="30" height="30">
-      </a>
-      <div class="navbar-nav flex-row">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link active" aria-current="page" href="#">Link</a>
-      </div>
-    </div>
-  </nav>
-
   <body>
     <!-- CODE HERE -->
-    <ul class="list-group">
-      <li class="list-group-item">Item I</li>
-      <li class="list-group-item">Item II</li>
-      <li class="list-group-item">Item III</li>
-      <li class="list-group-item">Item IV</li>
-      <li class="list-group-item">Item V</li>
-    </ul>
-
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-secondary">Secondary</button>
-    <button type="button" class="btn btn-success">Success</button>
-    <button type="button" class="btn btn-danger">Danger</button>
-
   </body>
-
-  <style>
-  .navbar-nav .nav-link {
-      padding-right: 1rem;
-      color: blue !important;
-      font-weight: 200;
-  }
-
-  .bg-light {
-    background-color:white !important;
-  }
-  </style>
 </html>
