--- a/Example/01_basic.html
+++ b/Example/01_basic.html
@@ -3,10 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -27,12 +24,9 @@
   </style>
   <body>
     <h1>Hello, world!</h1>
-    <div
-      class="alert alert-warning alert-dismissible fade show"
-      role="alert"
-    >
-      <strong>Holy guacamole!</strong> You should check in
-      on some of those fields below.
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <strong>Holy guacamole!</strong> You should check in on some of those
+      fields below.
       <button
         type="button"
         class="btn-close"
@@ -78,6 +72,14 @@
     <div class="row">
       <div class="col-8 box"></div>
       <div class="col-4 box"></div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">One of three columns</div>
+        <div class="col-sm">One of three columns</div>
+        <div class="col-sm">One of three columns</div>
+      </div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
