--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,6 +7,12 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
 
     <!-- Google Font - Lato -->
     <link
@@ -19,9 +25,62 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <nav class="navbar navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="/Exercise_B/assets/images/logo.png" alt="" />
+        </a>
+      </div>
+    </nav>
     <!--Banner Jumbotron of the image-->
+    <div class="card card-image">
+      <div class="text-white text-center rgba-stylish-strong py-5 px-4">
+        <div class="py-5">
+          <h2 class="card-title h2 my-4 py-2">Beautiful Flowers</h2>
+          <button type="button" class="btn green-btn">Learn More</button>
+        </div>
+      </div>
+    </div>
 
-    <!--Four containers with img / text-->
+    <!-- Four containers with img / text-->
+    <section id="section-two">
+      <div class="container features">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-l-6 row-cols-xl-4">
+          <div class="col">
+            <img
+              class="icon"
+              src="/Exercise_B/assets/images/flower-icon.png"
+              alt="flower icon"
+            />
+            <p class="description">Flowers for every kind of situation</p>
+          </div>
+          <div class="col">
+            <img
+              class="icon"
+              src="/Exercise_B/assets/images/payment-icon.png"
+              alt="payment icon"
+            />
+            <p class="description">Flowers for every kind of situation</p>
+          </div>
+          <div class="col">
+            <img
+              class="icon"
+              src="/Exercise_B/assets/images/phone-icon.png"
+              alt="Phone icon"
+            />
+            <p class="description">Flowers for every kind of situation</p>
+          </div>
+          <div class="col">
+            <img
+              class="icon"
+              src="/Exercise_B/assets/images/truck-icon.png"
+              alt="truck icon"
+            />
+            <p class="description">Flowers for every kind of situation</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- 4 containers -->
 
     <!-- Payments Div -->
@@ -30,5 +89,13 @@
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
