--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -1,26 +1,77 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Flower Shop BS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Link and CDN required for bootstrap -->
+<head>
+  <meta charset="utf-8" />
+  <title>Flower Shop BS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Google Font - Lato -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
-    <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
-  </head>
+  <!-- Link and CDN required for bootstrap -->
 
-  <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+  <!-- Google Font - Lato -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+</head>
 
+<body>
+  <!--Header (flower shop logo block element)-->
+  <nav class="navbar navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="./assets/images/logo.png" alt="logo" width="auto" height="auto">
+      </a>
+    </div>
+  </nav>
+  <!--Banner Jumbotron of the image-->
+  <section class="banner">
+    <div class="container">
+      <div class="row">
+        <div class="col align-self-start">
+          <!-- One of three columns -->
+        </div>
+        <div class="col align-self-center text-to-center">
+          <h1 class="shopName">Beautiful Flowers</h1>
+          <button type="button" class="btn btn-success green-btn">Learn More</button>
+        </div>
+        <div class="col align-self-end">
+          <!-- One of three columns -->
+        </div>
+      </div>
+    </div>
+    </div>
+
+    <div class="container four">
+      <div class="row row-cols-1 row-cols-sm-2 ">
+        <div class="col">
+          <div class="col-6 giveBorder">
+            <img src="./assets/images/flower-icon.png" alt="">
+            <p>Flowers for every kind of situation</p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="col-6 giveBorder">
+            <img src="./assets/images/payment-icon.png" alt="">
+            <p>All major payments knnds accepted</p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="col-6 giveBorder">
+            <img src="./assets/images/phone-icon.png" alt="">
+            <p>Free consultation</p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="col-6 giveBorder">
+            <img src="./assets/images/truck-icon.png" alt="">
+            <p>City wide delivery</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--Four containers with img / text-->
     <!-- 4 containers -->
 
@@ -30,5 +81,16 @@
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
-  </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"></script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
