--- a/Example/buttons.html
+++ b/Example/buttons.html
@@ -29,7 +29,7 @@
     <!-- Navbar -->
     <nav
       class="navbar navbar-light"
-      style="background-color: #e3f2fd"
+      style="background-color: yellow"
     >
       <ul class="nav">
         <li class="nav-item">
