--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -5,9 +5,24 @@
     <title>Flower Shop BS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Link and CDN required for bootstrap -->
+    <link rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+    crossorigin="anonymous"/>
 
+    <script src="https://code.jquery.com/jquery-12.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"></script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"></script>
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -19,16 +34,42 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <nav>
+      <a href="#"><img src="/Exercise_B/assets/images/logo.png" alt=""></a>
+    </nav>
     <!--Banner Jumbotron of the image-->
-
+      <div class="jumbotron">
+        <div class="title"><h1>Beautiful Flowers</h1></div>
+        <div class="learn"><a href="#" style="text-decoration: none"><h2>Learn more</h2></a></div>  
+      </div>
     <!--Four containers with img / text-->
-    <!-- 4 containers -->
+     <!-- 4 containers -->
+    <section class="bottom">
+      <div class="row">
+          <div class="about col col-md-6 col-sm-12 col-lg-3">
+            <div class="aboutIcon"><img src="/Exercise_B/assets/images/flower-icon.png" alt=""></div>
+            <div class="aboutText"><p>Flowers for every kind if situation</p></div>
+          </div>
+     <!-- Payments Div -->
+          <div class="about col col-md-6 col-sm-12 col-lg-3">
+            <div class="aboutIcon"><img src="/Exercise_B/assets/images/payment-icon.png" alt=""></div>
+            <div class="aboutText"><p>All major payments kind accepted</p></div>
+          </div>
+      <!-- </div> -->
+     <!-- Consultation Div -->
+      <!-- <div class="row"> -->
+      <div class="about col col-md-6 col-sm-12 col-lg-3">
+        <div class="aboutIcon"><img src="/Exercise_B/assets/images/phone-icon.png" alt=""></div>
+        <div class="aboutText"><p>Free Consulation</p></div>
+      </div>
+      <!-- Delivery Div -->
+      <div class="about col col-md-6 col-sm-12 col-lg-3">
+        <div class="aboutIcon"><img src="/Exercise_B/assets/images/truck-icon.png" alt=""></div>
+        <div class="aboutText"><p>City wide delivery</p></div>
+      </div>
+      </div>
+    </section> 
+   <!--Scripts required for bootstrap CDN-->
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
-
-    <!--Scripts required for bootstrap CDN-->
   </body>
 </html>
