--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -1,17 +1,46 @@
 <!-- Do not forget to add in the Bootstrap CDN's so that you can utilise the pre-constructed HTML elements -->
 <!DOCTYPE html>
 <html class="no-js">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
-    <meta name="description" content="" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
-  </head>
-  <body>
-    <!-- CODE HERE -->
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title></title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="container">
+    <div class="row d-flex align-content-center" style="height: 10vh;">
+      <div class="d-flex col-1 align-self-center justify-content-end"><img src="./assets/bootstrap.png" style="width: 100%;"></div>
+      <a href="#" class="col-1 link-primary ml-2">Home</a>
+      <a href="#" class="col-1 link-primary ml-2">Link</a>
+    </div>
+    <div class="row border p-3">
+      Item I
+    </div>
+    <div class="row border p-3">
+      Item II
+    </div>
+    <div class="row border p-3">
+      Item III
+    </div>
+    <div class="row border d-flex align-content-center p-3">
+      Item IV
+    </div>
+    <div class="row border d-flex align-content-center p-3">
+      Item V
+    </div>
+    <div class="row border d-flex">
+      <button type="button" class="btn btn-primary">Primary</button>
+      <button type="button" class="btn btn-secondary ml-1">Secondary</button>
+      <button type="button" class="btn btn-success ml-1">Success</button>
+      <button type="button" class="btn btn-danger ml-1">Danger</button>
+    </div>
+  </div>
+</body>
+
 </html>
