Changed the colour of background

--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -13,14 +13,18 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+    <!-- Custom Stylesheet -->
+    <style>
+      .bg-success {
+        background-color: rgb(123, 226, 158) !important;
+      }
+    </style>
+    
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
     />
-    <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
-  </head>
 
   <body>
     <div class="container">
